# simple-syrup

./: .env.local  .gitignore  Cargo.toml  Makefile  Procfile  README.md  build.rs  config.json  deploy.js  init-dbs.sql  localhost-key.pem  localhost.pem  predeploy.js  sqlx-data.json
.github/workflows/: github-deploy-dev.yml  github-deploy.yml
contracts/: Counter.sol
deployer/: .gitignore  Cargo.toml
deployer/src/: main.rs
derive/: Cargo.toml
derive/src/: lib.rs  server.rs  tests.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/actix_web/service/: trait.HttpServiceFactory.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  (+3 more)
docs/simple_syrup/: all.html  fn.main.html  fn.root_server.html  index.html  macro.build_app_ty!.html  macro.build_app_ty.html  sidebar-items.js
docs/simple_syrup/api/: enum.VerificationStatus.html  index.html  sidebar-items.js  struct.index.html  trait.AuthenticatorServer.html  trait.ServerData.html  trait.TestDefault.html
docs/simple_syrup/auth/: fn.fetch_jwks.html  fn.validate_token.html  fn.validator.html  index.html  sidebar-items.js  struct.Claims.html
docs/simple_syrup/config/: enum.ServerType.html  index.html  sidebar-items.js  struct.Config.html  struct.DBOptions.html  struct.Server.html  struct.ServerPublicData.html  struct.root.html
docs/simple_syrup/db/: fn.new_pool.html  index.html  sidebar-items.js
docs/src/simple_syrup/: auth.rs.html  config.rs.html  main.rs.html
localDeploy/: deploy.sh  index.js  package-lock.json  package.json
migrations/: 20220209144730_init.sql  20220320184842_prepare.sql  20220331000835_prep-data.sql  20220518132706_web3.sql
src/: auth.rs  config.rs  main.rs  test.rs
src/api/: base.rs  biometric.rs  controllers.rs  email.rs  mod.rs  password.rs  qa.rs
src/db/: mod.rs
(+61 files in other folders)
