[package]
name = "deployer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.21" }
dotenv = "0.15.0"
env_logger = "0.9.0"
fork = "0.1.18"
futures = "0.3.19"
hex-literal = "0.3.4"
hyper = { version = "0.14", features = ["full"] }
serde = "1.0.136"
tokio = "1.15.0"
tokio-core = "0.1.18"
web3 = "0.17.0"
